Use Redis for storing and caching rendered posts.

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -36,37 +36,7 @@ p {
   color: $paragraph;
   line-height: 1.7;
 }
-.navbar {
-  margin-top: 10px;
-  color: $paragraph;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  h1 {
-    margin: 0;
-    margin-right: 20px;
-    font-weight: 300;
-    display: inline-block;
-    color: $primary;
-    strong {
-      font-weight: 300;
-      color: $accent;
-    }
-  }
-  div {
-    display: inline;
-    a {
-      margin: 4px 10px;
-      cursor: pointer;
-      transition: color cubic-bezier(0.25, 0.46, 0.45, 0.94) 100ms;
-      color: $paragraph;
-      text-decoration: none;
-      &:hover {
-        color: $primary;
-      }
-    }
-  }
-}
+
 #content {
   margin-top: 40px;
 }
@@ -137,34 +107,53 @@ p {
     }
   }
 }
+@mixin element-color($color) {
+  background-image: url('data:image/svg+xml;utf8,<svg ...><g stroke="#{$color}" ... /></g></svg>');
+}
+
+.pre-wrapper {
+  position: relative;
+  &:hover {
+    .pre-copy-button {
+      opacity: 1;
+    }
+  }
+  .pre-copy-button {
+    border: none;
+    outline: 2px solid transparent;
+    cursor: pointer;
+    opacity: 0.4;
+    position: absolute;
+    background-color: transparent;
+    background-image: url("akar-clipboard.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    min-height: 26px;
+    min-width: 26px;
+    background-size: cover;
+    top: 6px;
+    right: 6px;
+    &.success {
+      background-image: url("akar-check.svg");
+    }
+  }
+}
 
 .blog-post-content {
+  li {
+    margin-bottom: 10px;
+  }
   pre,
   code {
     font-size: 1.1em;
     border: 1px solid $subtle;
   }
   pre {
-    position: relative;
     background-color: black !important;
     line-height: 1.15em;
     padding: 2px;
     font-family: monospace;
     overflow-x: auto;
-    &:hover {
-      .pre-copy-button {
-        opacity: 1;
-      }
-    }
-    .pre-copy-button {
-      opacity: 0.4;
-      position: absolute;
-      top: 6px;
-      right: 6px;
-      &::after {
-        content: "copy";
-      }
-    }
   }
   code {
     padding: 1px;
@@ -188,4 +177,106 @@ p {
 }
 .post-break {
   margin-bottom: 10px;
+}
+
+.navbar {
+  margin-top: 10px;
+  color: $paragraph;
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+  .mobile-links {
+    display: none;
+  }
+  h1 {
+    margin: 0;
+    margin-right: 20px;
+    font-weight: 300;
+    display: inline-block;
+    color: $primary;
+    strong {
+      font-weight: 300;
+      color: $accent;
+    }
+  }
+  .desktop-links {
+    display: inline;
+  }
+  .desktop-links,
+  .mobile-links {
+    a {
+      margin: 4px 10px;
+      cursor: pointer;
+      transition: color cubic-bezier(0.25, 0.46, 0.45, 0.94) 100ms;
+      color: $paragraph;
+      text-decoration: none;
+      &:hover {
+        color: $primary;
+      }
+    }
+  }
+}
+
+/* Using plain CSS */
+@media (max-width: 512px) {
+  .navbar {
+    align-items: center;
+    .desktop-links {
+      display: none;
+    }
+    .mobile-links {
+      -webkit-box-shadow: 0px 13px 15px 5px #000000;
+      box-shadow: 0px 13px 15px 5px #000000;
+      display: none;
+      z-index: 1;
+      width: calc(100% - 14px);
+      position: absolute;
+      top: 92px;
+      flex-direction: column;
+      left: 0px;
+      padding-left: 14px;
+      background-color: $background-secondary;
+      a {
+        user-select: none;
+        min-height: 44px;
+        display: flex;
+        align-items: center;
+      }
+    }
+    .mobile-menu-toggle-input:checked ~ .mobile-links {
+      display: flex;
+    }
+    .mobile-menu-toggle {
+      display: block;
+    }
+  }
+}
+.mobile-menu-toggle {
+  display: none;
+  width: 24px;
+  padding: 8px;
+}
+.mobile-menu-toggle:before,
+.mobile-menu-toggle:after,
+.mobile-menu-toggle div {
+  cursor: pointer;
+  background: $paragraph;
+  content: "";
+  display: block;
+  height: 2px;
+  border-radius: 3px;
+  margin: 3px 0;
+  transition: transform 0.5s;
+}
+.mobile-menu-toggle-input:checked + .mobile-menu-toggle:before {
+  transform: translateY(5px) rotate(135deg);
+}
+.mobile-menu-toggle-input:checked + .mobile-menu-toggle:after {
+  transform: translateY(-5px) rotate(-135deg);
+}
+.mobile-menu-toggle-input:checked + .mobile-menu-toggle div {
+  transform: scale(0);
+}
+.mobile-menu-toggle-input {
+  display: none;
 }
