--- a/styles/index.scss
+++ b/styles/index.scss
@@ -74,37 +74,41 @@ p {
   a {
     text-decoration: none;
   }
-  .overlay-text {
-    position: absolute;
-    bottom: 30%;
-    pointer-events: none;
-    opacity: 0;
-    transition: all 300ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
-    width: 100%;
-    text-align: center;
-  }
-  .overlay {
-    position: absolute;
-    transition: 0.5s ease;
-    height: 140%;
-    width: 100%;
-    top: 0;
-    background: linear-gradient(
-      0deg,
-      rgba(0, 0, 0, 1) 20%,
-      rgba(0, 0, 0, 1) 10%,
-      rgba(255, 255, 255, 0) 76%
-    );
-    opacity: 1;
-    transition: all 300ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
-  }
-  &:hover {
-    .overlay-text {
-      opacity: 1;
-    }
-    .overlay {
-      top: -40%;
-    }
+  //.overlay-text {
+  //  position: absolute;
+  //  bottom: 30%;
+  //  pointer-events: none;
+  //  opacity: 0;
+  //  transition: all 300ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
+  //  width: 100%;
+  //  text-align: center;
+  //}
+  //.overlay {
+  //  position: absolute;
+  //  transition: 0.5s ease;
+  //  height: 140%;
+  //  width: 100%;
+  //  top: 0;
+  //  background: linear-gradient(
+  //    0deg,
+  //    rgba(0, 0, 0, 1) 20%,
+  //    rgba(0, 0, 0, 1) 10%,
+  //    rgba(255, 255, 255, 0) 76%
+  //  );
+  //  opacity: 1;
+  //  transition: all 300ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
+  //}
+  //&:hover {
+  //  .overlay-text {
+  //    opacity: 1;
+  //  }
+  //  .overlay {
+  //    top: -40%;
+  //  }
+  //}
+
+  .blog-post-link::after {
+    content: " ->";
   }
 }
 @mixin element-color($color) {
